--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Les Innovateurs du coding - Home</title>
+    <link rel="icon" href="/images/Sans titre.png" type="image/x-icon">
     <script src="java.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
-    <nav class="nav">
+    <div class="nav">
         <img class="logo-nav" src="./images/full-logo.png" alt="" height="50px" width="45px">
         <a class="bouton-nav marge btn" href="index.html"> Home</a>
         <a class="bouton-nav" href="contact.html">Contact</a>
@@ -18,7 +19,7 @@
         <a class="bouton-nav" href="projet.html">Projets</a>
    
 
-    </nav> 
+    </div> 
     <br><br><br><br>
     <div class="main">
         <img class="logo-home" src="images/logo-removebg-preview.png" height="300px" width="360px" alt="">
