Color update v1(no changes)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <div class="nav">
-        <img class="logo-nav" src="./images/full-logo.png" alt="" height="50px" width="45px">
         <a class="bouton-nav marge btn" href="index.html"> Home</a>
         <a class="bouton-nav" href="contact.html">Contact</a>
         <a class="bouton-nav" href="about-us.html">About Us</a>
@@ -22,7 +21,7 @@
     </div> 
     <br><br><br><br>
     <div class="main">
-        <img class="logo-home" src="images/logo-removebg-preview.png" height="300px" width="360px" alt="">
+        <img class="logo-home" src="images/3d.png" height="100px" width="300px" alt="">
         <p>
             On est les innovateurs du coding, un binome constitué de <a class="lien" href="contact.html">Ahmed Bechihk</a> et, <a class="lien" href="contact.html">Ahmed Antit</a>.
             Notre slogant est Code Your Future, nous avons confiance en le future du code sur le marché actuel et c'est pour cela que nous l'encourageons.
